--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
 .container {
   position: relative;
 }
-#overlay {
+
+.overlay {
   position: absolute;
   top: 0;
   left: 0;
 }
+
+.flippedX {
+  transform: scaleX(-1);
+}
+
