--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,19 @@
-.container {
+body {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 1rem;
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+  grid-template-areas: 'video controls' 'oscilloscope oscilloscope';
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: min-content minmax(100px, auto);
+  gap: 2rem;
+}
+
+.video-container {
   position: relative;
+  grid-area: video;
 }
 
 .overlay {
@@ -8,7 +22,14 @@
   left: 0;
 }
 
+.inputVideo {
+  width: 100%;
+}
+
 .flippedX {
   transform: scaleX(-1);
 }
 
+#pbutton {
+  grid-area: oscilloscope;
+}
